--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-	text-align: center;
+	/* text-align: center; */
 	background-color: #2f363d !important;
 	/* background-color: aliceblue !important; */
 
