--- a/src/Components/Homepage/Homepage.css
+++ b/src/Components/Homepage/Homepage.css
@@ -1,6 +1,7 @@
 .OuterContainer {
 	/* background-color: #222 !important; */
 	color: white;
+	text-align: center;
 }
 h1 {
 	font-family: "Montserrat", sans-serif;
