--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
 	/* text-align: center; */
-	background-color: #2f363d !important;
+	/* background-color: #2f363d !important; */
 	/* background-color: aliceblue !important; */
 
 	height: 100vh;
 	width: 100vw;
 	font-family: "Montserrat", sans-serif;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
