--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
 	/* text-align: center; */
-	/* background-color: #2f363d !important; */
+	background-color: #2f363d !important;
 	/* background-color: aliceblue !important; */
 
 	height: 100vh;
