--- a/src/Components/Dashboard/MoviesCards/moviescard.css
+++ b/src/Components/Dashboard/MoviesCards/moviescard.css
@@ -1,7 +1,12 @@
 .card {
 	width: 450px;
 }
-
+.TitleName {
+	font-size: 2rem;
+}
+.Text {
+	font-size: 1rem;
+}
 @media (max-width: 550px) {
 	.card {
 		width: 350px;
